// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. with a single author 1`] = `
<View>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={2}
    minimumFontScale={0.7}
    style={
      Object {
        "color": "#850029",
        "fontFamily": "TimesModern-Bold",
        "fontSize": 22,
        "fontWeight": "400",
        "lineHeight": 19,
      }
    }
    testID="author"
  >
    <Text
      allowFontScaling={true}
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
      style={
        Object {
          "color": "#850029",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 22,
          "fontWeight": "400",
          "lineHeight": 19,
        }
      }
    >
      Alexandra Frean
    </Text>
  </Text>
</View>
`;

exports[`2. with a very long byline 1`] = `
<View>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={2}
    minimumFontScale={0.7}
    style={
      Object {
        "color": "#850029",
        "fontFamily": "TimesModern-Bold",
        "fontSize": 22,
        "fontWeight": "400",
        "lineHeight": 19,
      }
    }
    testID="author"
  >
    <Text
      allowFontScaling={true}
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
      style={
        Object {
          "color": "#850029",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 22,
          "fontWeight": "400",
          "lineHeight": 19,
        }
      }
    >
      Camilla Long
    </Text>
    <Text
      allowFontScaling={true}
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
      style={
        Object {
          "color": "#850029",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 22,
          "fontWeight": "400",
          "lineHeight": 19,
        }
      }
    >
      , Environment Editor | 
    </Text>
    <Text
      allowFontScaling={true}
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
      style={
        Object {
          "color": "#850029",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 22,
          "fontWeight": "400",
          "lineHeight": 19,
        }
      }
    >
      Camilla Long
    </Text>
    <Text
      allowFontScaling={true}
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
      style={
        Object {
          "color": "#850029",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 22,
          "fontWeight": "400",
          "lineHeight": 19,
        }
      }
    >
      , Environment Editor | 
    </Text>
    <Text
      allowFontScaling={true}
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
      style={
        Object {
          "color": "#850029",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 22,
          "fontWeight": "400",
          "lineHeight": 19,
        }
      }
    >
      Camilla Long
    </Text>
    <Text
      allowFontScaling={true}
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
      style={
        Object {
          "color": "#850029",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 22,
          "fontWeight": "400",
          "lineHeight": 19,
        }
      }
    >
      , Environment Editor
    </Text>
  </Text>
</View>
`;
